--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,4 +19,4 @@ jobs:
 
       - uses: BigWigsMods/packager@v2
         with:
-          args: -S -n "{package-name}-{project-version}"
+          args: -n "{package-name}-{project-version}"
